# capocantiere-ai

./: .env.example  .gitignore  README.md  debug_init.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: chat_logic.py  config.py  crm_db.py  db.py  document_manager.py  knowledge_chain.py  logic.py  maps_api.py  schedule_db.py  shift_service.py  weather_api.py  workflow_engine.py
data/: app.db  capocantiere.db
knowledge_base/: ask.py  ingest.py
knowledge_base/vectorstore/: chroma.sqlite3
knowledge_base/vectorstore/4c9273ac-215d-4db7-befd-02e6ef6c8816/: index_metadata.pickle
server/: app.py
server/data/: app.db
server/pages/: 00_Carica_Documenti.py  01_Dashboard.py  01_Reportistica.py  01_📊_Reportistica.py  02_Assistente_AI.py  02_Expert_Chat_Enhanced.py  02_📈_Assistente_Dati.py  02_🤖_Expert_Chat_Enhanced.py  03_Personale.py  03_👨‍🔧_Esperto_Tecnico.py  04_Commesse.py  04_Cronoprogramma.py  04_📈_Cronoprogramma.py  05_Riepilogo.py  05_⚙️_Workflow_Analysis.py  06_📚_Document_Explorer.py  07_🌦️_Meteo_Cantiere.py  10_Pianificazione_Turni.py  10_📅_Pianificazione_Turni.py  11_Anagrafica.py  11_👨‍💼_Anagrafica.py  12_Gestione_Squadre.py  12_👥_Gestione_Squadre.py  13_Control_Room_Ore.py  13_✏️_Control_Room_Ore.py  14_Riepilogo_Calendario.py  15_Stampe_Operative.py
tools/: extractors.py  schedule_extractor.py
