# pyproject.toml (Versione 5.0 - Build Stabile per Windows)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capocantiere-ai"
version = "1.0.0"
authors = [
  { name="G. Verardo", email="tuo.email@example.com" },
]
description = "Applicazione Streamlit per la gestione e l'analisi di dati di cantiere navale tramite AI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Streamlit",
]
dependencies = [
    # --- CORE LIBS (Stabili) ---
    "streamlit==1.36.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.1",
    "plotly==5.22.0",

    # --- LANGCHAIN ECOSYSTEM (Strategia Stabile) ---
    "langchain==0.2.5",
    "langchain-community",
    "langchain-core",
    "langchain-chroma",
    "langchain-ollama",
    "langchain-text-splitters",

    # --- RAG & AI LIBS (Stabili e Compatibili con Windows Build) ---
    "ollama==0.5.4",
    "PyMuPDF==1.24.1",
    "chromadb==0.4.24", # <-- MODIFICA CHIAVE per evitare la compilazione C++
    "torch==2.3.0",
    "transformers==4.41.2",
    "sentence-transformers==2.7.0",
    "scikit-learn==1.5.0",
    "joblib==1.4.2",
]

[project.urls]
"Homepage" = "https://github.com/gverardo87-lab/capocantiere-ai"
"Bug Tracker" = "https://github.com/gverardo87-lab/capocantiere-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "server*", "tools*", "knowledge_base*"]
exclude = ["data*", "venv*"]

